--- a/css/main.css
+++ b/css/main.css
@@ -120,12 +120,10 @@ button {
   box-shadow: 0 0 0 rgba(0,0,0,.3);
 }
 
-.videos iframe {
-  margin-left: 40px;
-}
-
-.player {
-  display: inline-block;
+.videos img {
+  padding: 10px;
+  width: 49%;
+  height: auto;
 }
 
 footer{
